--- a/examples/core_ipython_example.ipynb
+++ b/examples/core_ipython_example.ipynb
@@ -6,7 +6,32 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ">> Initiating nrutils.\n",
+      ">> Please note style conventions:                  \n",
+      "   * lower case function/method/variable names                  \n",
+      "   * no underscore in names unless there are repeated letters                  \n",
+      "   * information is implicitely in time domain unless explicitely stated.                  \n",
+      "   * frequency domain information will start with \"fd\".\n",
+      "\n",
+      "nrutils:\n",
+      "\n",
+      "  .core: \n",
+      "      .basics*\n",
+      "      .basics\n",
+      "      .nrsc\n",
+      "  .tools: \n",
+      "    .unit: \n",
+      "      .conversion\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from nrutils.core.nrsc import *"
    ]
@@ -79,7 +104,7 @@
       "(\u001b[96mgwylm\u001b[0m)>> Found \u001b[4mdt\u001b[0m (=0.4) keyword.\n",
       "(\u001b[96mgwylm\u001b[0m)>> Found \u001b[4mlm\u001b[0m (=[2, 2]) keyword.\n",
       "(\u001b[96mgwylm\u001b[0m)>> Found \u001b[4mload\u001b[0m (=True) keyword.\n",
-      "(\u001b[96mgwylm\u001b[0m)>> Found \u001b[4mscentry_obj\u001b[0m (=<nrutils.core.nrsc.scentry instance at 0x11239d638>) keyword.\n",
+      "(\u001b[96mgwylm\u001b[0m)>> Found \u001b[4mscentry_obj\u001b[0m (=<nrutils.core.nrsc.scentry instance at 0x1123a4bd8>) keyword.\n",
       "(\u001b[96mgwylm\u001b[0m)>> Found \u001b[4mverbose\u001b[0m (=True) keyword.\n",
       "(\u001b[96mload\u001b[0m)>> Loading: \u001b[96mrMPsi4_Y_l2_m2.asc\u001b[0m\n",
       "\u001b[95m(**) Waveform not uniform in time-step. Interpolation will be applied.\u001b[0m\n",
@@ -100,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -108,12 +133,12 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.axes._subplots.AxesSubplot at 0x11119da10>,\n",
-       " <matplotlib.axes._subplots.AxesSubplot at 0x1111a3350>,\n",
-       " <matplotlib.axes._subplots.AxesSubplot at 0x111244b50>]"
+       "[<matplotlib.axes._subplots.AxesSubplot at 0x11a5ee190>,\n",
+       " <matplotlib.axes._subplots.AxesSubplot at 0x115765950>,\n",
+       " <matplotlib.axes._subplots.AxesSubplot at 0x11a60c4d0>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,17 +148,8 @@
     "# y.plot(kind='strain')\n",
     "\n",
     "# plot time domain psi4\n",
-    "y.plot(kind='psi4',show=True)"
+    "y.plot(kind='psi4',show=not True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
