updating readme in hacked_overview

--- a/review/hackh5_review/hackh5_overview.ipynb
+++ b/review/hackh5_review/hackh5_overview.ipynb
@@ -56,10 +56,19 @@
     "\n",
     "### Instructions\n",
     "\n",
-    "1. Clone the repository locally. THis includes all h5 and gwf(i.e. frame) files\n",
+    "1. Copy required files locally. THis includes all h5 and gwf(i.e. frame) files\n",
     "    \n",
-    "    `git clone ...`\n",
-    "\n",
+    "    A1. navigate to https://github.com/llondon6/nrutils_dev/tree/master/review/hackh5_review\n",
+    "    A2. click on each file, and select the `download` option\n",
+    "    \n",
+    "    `- Alternatively -`\n",
+    "    \n",
+    "    \n",
+    "    * clone the entire nrutils_dev repository\n",
+    "    \n",
+    "    B1. git clone https://github.com/llondon6/nrutils_dev.git\n",
+    "    B2. cd nrutils_dev/review/hackh5_review/\n",
+    "    B3. jupyter notebook\n",
     "\n",
     "2. Run cell by cell\n",
     "  "
