fixing scbuild bugs in progress

--- a/examples/core_ipython_example.ipynb
+++ b/examples/core_ipython_example.ipynb
@@ -1,20 +1,75 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "%matplotlib inline\n",
-    "from nrutils.core.nrsc import *"
+    "# Core example for nrutils: Find a simulation, load and plot waveform data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## >> Let's start by importing nrutils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The highest level init for nrutils is located at: /Users/book/JOKI/Libs/KOALA/nrutils_dev/nrutils/__init__.pyc\n",
+      "\n",
+      ">> Initiating nrutils ...\n",
+      "\n",
+      ">> Sub-Packages to be imported:\n",
+      "   -> core\n",
+      "   -> manipulate\n",
+      "   -> tools\n",
+      ">> Please note style conventions:                  \n",
+      "   * lower case function/method/variable names                  \n",
+      "   * no underscore in names unless there are repeated letters, or counfounded syllables                  \n",
+      "   * information is implicitely in time domain unless explicitely stated.                  \n",
+      "   * frequency domain information will start with \"fd\".\n",
+      "\n",
+      "nrutils:\n",
+      "\n",
+      "  .core: \n",
+      "      .basics*\n",
+      "      .basics\n",
+      "      .nrsc\n",
+      "  .manipulate: \n",
+      "      .bundlers\n",
+      "  .tools: \n",
+      "    .unit: \n",
+      "      .conversion\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Turn on inline plotting with matplotlib, and import needed thigs from nrutils\n",
+    "%matplotlib inline\n",
+    "from nrutils import scsearch,gwylm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find a simulation using scsearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -38,6 +93,13 @@
     "# A = scsearch(institute='sxs',nonspinning=True,q=[1,10],verbose=True,unique=True)\n",
     "# A = scsearch(precessing=True,q=[1,1.5],verbose=True,unique=True)\n",
     "A = scsearch(keyword=\"base\",unique=True,verbose=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert a single simulation into a waveform object with desired multipoles"
    ]
   },
   {
@@ -69,6 +131,13 @@
     "\n",
     "# Convert a single simulation into a waveform object with desired multipoles\n",
     "y = gwylm( scentry_obj = A[0], lm=[2,2], dt=0.4, verbose=True )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot time domain strain. NOTE that strain is calculated automatically"
    ]
   },
   {
