finally added automated handling of BAM level and extraction radius

--- a/examples/wavform_characteristics_example.ipynb
+++ b/examples/wavform_characteristics_example.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clean Ringdown\n",
-    "The cleaning of the post-merger-tingdown junk radiation is useful for fitting QNMs in the frequency domain. Here we try to implement simple TD windowing."
+    "# Waveform Characteristics Example\n",
+    "Its useful to know when the waveform \"starts\" and \"ends\". Here we summarize how nrutils lets you know about these useful markers. "
    ]
   },
   {
