finaliing changes for lvcnr5_to_gwylm which converts lvcnr files from sxs into gwylm objects

--- a/examples/feature_align_example_1.ipynb
+++ b/examples/feature_align_example_1.ipynb
@@ -11,58 +11,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-11-05T21:05:43.173775Z",
+     "start_time": "2017-11-05T21:05:42.307389"
+    },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The highest level init for nrutils is located at: /Users/book/JOKI/Libs/KOALA/nrutils_dev/nrutils/__init__.pyc\n",
-      "\n",
-      ">> Initiating nrutils ...\n",
-      "\n",
-      ">> Sub-Packages to be imported:\n",
-      "   -> core\n",
-      "   -> generate\n",
-      "   -> manipulate\n",
-      "   -> tools\n",
-      ">> Please note style conventions:                  \n",
-      "   * lower case function/method/variable names                  \n",
-      "   * no underscore in names unless there are repeated letters, or counfounded syllables                  \n",
-      "   * information is implicitely in time domain unless explicitely stated.                  \n",
-      "   * frequency domain information will start with \"fd\".\n",
-      "\n",
-      "nrutils:\n",
-      "\n",
-      "  .core: \n",
-      "      .basics*\n",
-      "      .basics\n",
-      "      .nrsc\n",
-      "  .generate: \n",
-      "  .manipulate: \n",
-      "      .bundlers\n",
-      "      .rotate\n",
-      "  .tools: \n",
-      "    .unit: \n",
-      "      .conversion\n",
-      "\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mksm2_cw\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mksm2_sc\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mksm2_slm_norm\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_050217\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_060217\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_070217\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_090117v2\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_100117\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_120217\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_170117\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdnp_bam050217\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdns_amplitudes\u001b[0m\"\n",
-      "\u001b[93mkerr##\u001b[0m Found formula module \"\u001b[92mmmrdns_Mfjf\u001b[0m\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup ipython environment\n",
     "%load_ext autoreload\n",
@@ -70,7 +25,7 @@
     "# %matplotlib auto\n",
     "%matplotlib inline\n",
     "# Import useful things\n",
-    "from kerr import rgb,gmvpfit,modelrd,anglep,qnmfit,leaver,ndflatten,sunwrap,magenta,alert,green\n",
+    "from nrutils import rgb,alert,green\n",
     "from nrutils import scsearch,gwylm,FinalSpin0815,EradRational0815\n",
     "# Setup plotting backend\n",
     "import matplotlib as mpl\n",
@@ -633,9 +588,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -647,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
