--- a/examples/gwylm_without_catalog_example.ipynb
+++ b/examples/gwylm_without_catalog_example.ipynb
@@ -37,8 +37,6 @@
     "#\n",
     "# from os import system\n",
     "# system('source ~/.virtual_enviroments/ringdownFD_nikhef/bin/activate')\n",
-    "from kerr import rgb,gmvpfit,modelrd,anglep,qnmfit,leaver,ndflatten,sunwrap,alert,cyan,slm\n",
-    "from kerr.models import mmrdns as ns\n",
     "from nrutils import scsearch,gwylm,FinalSpin0815,EradRational0815,simdir2scentry\n",
     "# Setup plotting backend\n",
     "import matplotlib as mpl\n",
@@ -454,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -468,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
