adding radiatiated and remnant quantity estimation

--- a/issues/open/issue4_convert_lvcnrh5_to_gwylm.ipynb
+++ b/issues/open/issue4_convert_lvcnrh5_to_gwylm.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-06T08:22:03.244516Z",
-     "start_time": "2017-11-06T08:22:03.135213"
+     "end_time": "2017-11-17T12:05:32.835175Z",
+     "start_time": "2017-11-17T12:05:30.847695"
     },
     "collapsed": false
    },
@@ -22,9 +22,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "(\u001b[0;36m<module>\u001b[0m)>> The LASIMULATION version is located at: \u001b[1m\u001b[0;33m/Users/book/.ve/phenomhm/src/lalsuite/lib/python2.7/site-packages/lalsimulation\u001b[0m\u001b[0m\n"
+      "(\u001b[0;36mpositive\u001b[0m)>> Applying custom matplotlib settings.\n",
+      "(\u001b[0;36mnotebook\u001b[0m)>> The LASIMULATION version is located at: \u001b[1m\u001b[0;33m/Users/book/.virtual_enviroments/ringdownFD_nikhef/opt/lalsuite/lib/python2.7/site-packages/lalsimulation\u001b[0m\u001b[0m\n"
      ]
     }
    ],
@@ -83,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-06T09:06:40.920601Z",
-     "start_time": "2017-11-06T09:06:22.016842"
+     "end_time": "2017-11-17T12:05:34.105418Z",
+     "start_time": "2017-11-17T12:05:34.015555"
     },
     "collapsed": false
    },
@@ -105,7 +104,7 @@
    "source": [
     "# Define path to h5 file\n",
     "# h5dir = '/Users/book/MOUNT/lvcnr/SXS/SXS_BBH_0001_Res5.h5'\n",
-    "h5dir = '/Users/book/MOUNT/lvcnr/SXS/SXS_BBH_0063_Res5.h5'\n",
+    "h5dir = '/Users/book/GARREG/nrlvc_files/SXS/SXS_BBH_0001_Res5.h5'\n",
     "# h5dir = '/Users/book/MOUNT/lvcnr/SXS/SXS_BBH_0063_Res5.h5'\n",
     "\n",
     "# SXSID -- File Name \n",
@@ -146,17 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-11-06T09:15:54.024744Z",
-     "start_time": "2017-11-06T09:15:53.958154"
+     "end_time": "2017-11-17T12:05:47.038575Z",
+     "start_time": "2017-11-17T12:05:46.998484"
     },
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "aa['Y'][0]\n",
+    "# aa['Y'][0]\n",
     "f.close()"
    ]
   },
