adding solid frame rotations to gwylm

--- a/issues/closed/issue1_gwylm_understand_directory_and_scentry.ipynb
+++ b/issues/closed/issue1_gwylm_understand_directory_and_scentry.ipynb
@@ -12,12 +12,20 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-29T13:59:19.764821Z",
-     "start_time": "2017-10-29T13:59:17.793856"
+     "end_time": "2018-03-08T14:25:02.537484Z",
+     "start_time": "2018-03-08T14:25:01.172600"
     },
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\u001b[0;36mpositive\u001b[0m)>> Applying custom matplotlib settings.\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup ipython environment\n",
     "%load_ext autoreload\n",
@@ -57,8 +65,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-29T13:59:25.434668Z",
-     "start_time": "2017-10-29T13:59:19.768338"
+     "end_time": "2018-03-08T14:25:18.419182Z",
+     "start_time": "2018-03-08T14:25:02.661088"
     },
     "collapsed": false,
     "scrolled": false
@@ -68,12 +76,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m(\u001b[0;33mbam.py!\u001b[0m)>> \u001b[0m\u001b[0;36mWarning:\u001b[0m\u001b[0;33m The afterjunk spins appear to have been stored incorrectly. All parameters according to the initial data (as stored in the bbh files) will be stored. \u001b[0m\n"
+      "(\u001b[0;36mbam.py\u001b[0m)>> \u001b[0;36mInitial parameters corresponding to the bbh file's aftrejunktime will be used to populate metadata.\u001b[0m\n",
+      "\u001b[1m(\u001b[0;33mbam.py!\u001b[0m)\u001b[0m>> \u001b[0;36mWarning:\u001b[0m The estimated after junk binary separation is significantly different than the value stored in the bbh file: \u001b[0;33mx from calculation = 11.248633, x from bbh file=11.472200\u001b[0m. The user should understand whether this is an erorr or not.\n"
      ]
     }
    ],
    "source": [
-    "sim_dir = '/Volumes/athena/silures/BAM/q4Sebastian/q4a0_T_112_448/q4a0_T_112_448/'\n",
+    "sim_dir = '/Users/book/MOUNT/tmp/mnt/hogshead/NR_data/ReducedData-hogshead/chinmay_precessingRuns/q2_a10_a28_ph0_th60/'\n",
     "sce = simdir2scentry( sim_dir, verbose=False )"
    ]
   },
@@ -89,8 +98,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-29T13:59:25.481770Z",
-     "start_time": "2017-10-29T13:59:25.437478"
+     "end_time": "2018-03-08T14:25:18.490419Z",
+     "start_time": "2018-03-08T14:25:18.424777"
     },
     "collapsed": false
    },
@@ -99,47 +108,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "metadata_file_location \t = \t /Volumes/athena/silures/BAM/q4Sebastian/q4a0_T_112_448/q4a0_T_112_448/q4a0_T_112_448.bbh\n",
+      "metadata_file_location \t = \t /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/ReducedData-hogshead/chinmay_precessingRuns/q2_a10_a28_ph0_th60/q2_a10_a28_ph0_th60.bbh\n",
       "verbose \t = \t False\n",
-      "S2 \t = \t [0 0 0]\n",
-      "S1 \t = \t [0 0 0]\n",
-      "xf \t = \t 0.44679399666\n",
+      "S2 \t = \t [-6 -6 -6]\n",
+      "S1 \t = \t [-0.144636  0.305998  0.109113]\n",
+      "xf \t = \t 0.689794559629\n",
       "static \t = \t True\n",
+      "unstring \t = \t False\n",
       "source_dir \t = \t []\n",
       "overwrite \t = \t False\n",
-      "log \t = \t [Log for <nrutils.core.nrsc.scentry instance at 0x108bf9d88>] The file is \"/Volumes/athena/silures/BAM/q4Sebastian/q4a0_T_112_448/q4a0_T_112_448/q4a0_T_112_448.bbh\". This entry's metadata file is valid.\n",
-      "isafterjunk \t = \t False\n",
-      "label \t = \t ns-q4.00\n",
-      "note \t = \t \u001b[0;36mWarning:\u001b[0m\u001b[0;33m The afterjunk spins appear to have been stored incorrectly. All parameters according to the initial data (as stored in the bbh files) will be stored. \u001b[0m\n",
-      "__irrMf__ \t = \t 0.977936312783\n",
+      "log \t = \t [Log for <nrutils.core.nrsc.scentry instance at 0x115f9e5f0>] The file is \"/Users/book/MOUNT/tmp/mnt/hogshead/NR_data/ReducedData-hogshead/chinmay_precessingRuns/q2_a10_a28_ph0_th60/q2_a10_a28_ph0_th60.bbh\". This entry's metadata file is valid.\n",
+      "isafterjunk \t = \t True\n",
+      "label \t = \t 1chi0.80-2chi93.53-p-q2.00\n",
+      "note \t = \t \u001b[0;36mInitial parameters corresponding to the bbh file's aftrejunktime will be used to populate metadata.\u001b[0m\u001b[0;36mWarning:\u001b[0m The estimated after junk binary separation is significantly different than the value stored in the bbh file: \u001b[0;33mx from calculation = 11.248633, x from bbh file=11.472200\u001b[0m. The user should understand whether this is an erorr or not.\n",
+      "__irrMf__ \t = \t 0.9483096422\n",
       "valid \t = \t True\n",
-      "m1 \t = \t 0.799997\n",
-      "m2 \t = \t 0.200003\n",
-      "X2 \t = \t [ 0.  0.  0.]\n",
-      "X1 \t = \t [ 0.  0.  0.]\n",
-      "config \t = \t <nrutils.core.nrsc.scconfig instance at 0x108d31758>\n",
-      "P2 \t = \t [-0.0570992  -0.00028289  0.        ]\n",
-      "P1 \t = \t [ 0.0570992   0.00028289  0.        ]\n",
-      "extraction_map_dict \t = \t {'level_map': {1: 6, 2: 6, 3: 6, 4: 6, 5: 6, 6: 6}, 'radius_map': {1: 50.0, 2: 60.0, 3: 70.0, 4: 80.0, 5: 90.0, 6: 100.0}}\n",
-      "R1 \t = \t [ 0.      -2.24658  0.     ]\n",
-      "R2 \t = \t [ 0.       8.98632  0.     ]\n",
+      "m1 \t = \t 0.666676\n",
+      "m2 \t = \t 0.333333\n",
+      "X2 \t = \t [-54.000108 -54.000108 -54.000108]\n",
+      "X1 \t = \t [-0.32542189  0.68847622  0.24549738]\n",
+      "config \t = \t <nrutils.core.nrsc.scconfig instance at 0x115f06320>\n",
+      "P2 \t = \t [ 0.0445281  -0.00091702  0.03748058]\n",
+      "P1 \t = \t [-0.04364821  0.00434605 -0.03642829]\n",
+      "extraction_map_dict \t = \t {'level_map': {1: 7, 2: 7, 3: 7, 4: 7, 5: 7, 6: 6, 7: 6, 8: 5}, 'radius_map': {1: 50.0, 2: 60.0, 3: 70.0, 4: 80.0, 5: 90.0, 6: 100.0, 7: 120.0, 8: 200.0}}\n",
+      "R1 \t = \t [ 0.24760985  3.68349358  0.15099661]\n",
+      "R2 \t = \t [-0.11934795 -7.55641409 -0.0971128 ]\n",
       "default_extraction_par \t = \t 5\n",
       "source_file_path \t = \t []\n",
-      "mf \t = \t 1.00476055824\n",
-      "L2 \t = \t [ 0.         -0.          0.51311168]\n",
-      "L1 \t = \t [-0.          0.          0.12827792]\n",
-      "simname \t = \t q4a0_T_112_448\n",
-      "Sf \t = \t [  2.97457100e-19   1.41981300e-18   4.51058100e-01]\n",
+      "mf \t = \t 1.02138737526\n",
+      "L2 \t = \t [ -2.83307809e-01   1.48981366e-04   3.36582192e-01]\n",
+      "L1 \t = \t [-0.13483961  0.00242927  0.16185403]\n",
+      "simname \t = \t q2_a10_a28_ph0_th60\n",
+      "Sf \t = \t [-0.4677887  0.2154689  0.5025872]\n",
       "relative_simdir \t = \t \n",
-      "default_level \t = \t 6\n",
-      "b \t = \t 11.2329\n",
+      "default_level \t = \t 7\n",
+      "b \t = \t 11.2486328385\n",
       "setname \t = \t non-catalog\n",
       "isvalid \t = \t True\n",
-      "madm \t = \t 0.994066\n",
-      "Xf \t = \t [  2.94645072e-19   1.40639072e-18   4.46793997e-01]\n",
-      "raw_metadata \t = \t <positive.io.smart_object instance at 0x108d3d248>\n",
-      "eta \t = \t 0.160001799991\n",
-      "date_number \t = \t 1501116409.0\n"
+      "madm \t = \t 0.991785\n",
+      "Xf \t = \t [-0.44840325  0.20653974  0.48175968]\n",
+      "raw_metadata \t = \t <positive.io.smart_object instance at 0x1108b2b00>\n",
+      "eta \t = \t 0.2222231111\n",
+      "date_number \t = \t 1492599802.0\n"
      ]
     }
    ],
