updating interface for LVCNR h5 files and adding related issue for BAM case

--- a/issues/open/issue3_manipulate_waveform_frame.ipynb
+++ b/issues/open/issue3_manipulate_waveform_frame.ipynb
@@ -1393,7 +1393,21 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "y = gwylm(scentry_object,lmax=2,verbose)\n",
+    "\n",
+    "g = y.copy()\n",
+    "\n",
+    "# our desired psi4 data is in a dictionary of the format { (l,m):psi4RE+1j*psi4IM }\n",
+    "\n",
+    "# reseed psi4\n",
+    "wfarr = array( [t,psi4RE,psi4IM] ).T\n",
+    "g.ylm = [  ]\n",
+    "g.ylm.append( gwf(wfarr,l=L,m=M) )\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
