updating example notebook for extraction radii

--- a/examples/example_working_with_extraction_radii.ipynb
+++ b/examples/example_working_with_extraction_radii.ipynb
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the muse may wish to check that the above results do not depend significantly on processing choices, such as the minimum waveform frequency use in the FFI calculation of strain. For that check, the w22=... keyword in the call to gwylm is useful."
+    "The user may wish to check that the above results do not depend significantly on processing choices, such as the minimum waveform frequency use in the FFI calculation of strain. For that check, the w22=... keyword in the call to gwylm is useful."
    ]
   },
   {
