updating prop of dynamics

--- a/issues/open/issue3c_manipulate_waveform_frame_with_class.ipynb
+++ b/issues/open/issue3c_manipulate_waveform_frame_with_class.ipynb
@@ -660,7 +660,7 @@
     "alpha = bar.radiation_axis['td_alpha']\n",
     "beta = bar.radiation_axis['td_beta']\n",
     "gamma = bar.radiation_axis['td_gamma']\n",
-    "g_qa_td = g.__rotate_frame_at_all_times__( [gamma,-beta,alpha] )\n"
+    "g_qa_td = g.__rotate_frame_at_all_times__( [-gamma,-beta,-alpha] )\n"
    ]
   },
   {
@@ -736,7 +736,7 @@
     "alpha = bar.radiation_axis['fd_alpha']\n",
     "beta = bar.radiation_axis['fd_beta']\n",
     "gamma = bar.radiation_axis['fd_gamma']\n",
-    "mp_copreces = { (l,m):rotate_wfarrs_at_all_times( l,m, mp_jaligned, ( gamma, -beta, alpha ) ) for l,m in mp_jaligned if l==2 }"
+    "mp_copreces = { (l,m):rotate_wfarrs_at_all_times( l,m, mp_jaligned, ( -gamma, -beta, -alpha ) ) for l,m in mp_jaligned if l==2 }"
    ]
   },
   {
@@ -1055,9 +1055,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "LIGO+Python2.7",
    "language": "python",
-   "name": "python2"
+   "name": "ligo-py2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1069,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
