--- a/issues/open/issue3_manipulate_waveform_frame.ipynb
+++ b/issues/open/issue3_manipulate_waveform_frame.ipynb
@@ -22,7 +22,10 @@
      "end_time": "2018-11-14T16:24:19.448392Z",
      "start_time": "2018-11-14T16:24:16.778520"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -64,7 +67,10 @@
      "end_time": "2018-11-14T17:03:49.987434Z",
      "start_time": "2018-11-14T17:03:41.287519"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -116,7 +122,9 @@
      "start_time": "2018-11-14T17:03:49.993185"
     },
     "collapsed": false,
-    "scrolled": false
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -148,7 +156,9 @@
      "start_time": "2018-11-14T17:03:50.075933"
     },
     "collapsed": false,
-    "scrolled": false
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -240,7 +250,10 @@
      "end_time": "2018-11-14T16:24:43.543152Z",
      "start_time": "2018-11-14T16:24:43.439808"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -255,7 +268,10 @@
      "end_time": "2018-11-14T16:24:43.718764Z",
      "start_time": "2018-11-14T16:24:43.548826"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -271,7 +287,10 @@
      "end_time": "2018-11-14T16:24:43.791500Z",
      "start_time": "2018-11-14T16:24:43.725750"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -289,7 +308,10 @@
      "end_time": "2018-11-14T16:24:43.864180Z",
      "start_time": "2018-11-14T16:24:43.797220"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -312,7 +334,10 @@
      "end_time": "2018-11-14T16:24:46.613538Z",
      "start_time": "2018-11-14T16:24:43.870733"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -351,7 +376,10 @@
      "end_time": "2018-11-14T16:24:47.821798Z",
      "start_time": "2018-11-14T16:24:46.619072"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -404,7 +432,10 @@
      "end_time": "2018-11-14T16:24:53.117314Z",
      "start_time": "2018-11-14T16:24:52.981030"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -421,7 +452,10 @@
      "end_time": "2018-11-14T16:24:57.409426Z",
      "start_time": "2018-11-14T16:24:53.898307"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -448,7 +482,10 @@
      "end_time": "2018-11-14T16:24:59.328949Z",
      "start_time": "2018-11-14T16:24:57.414969"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -531,7 +568,10 @@
      "end_time": "2018-11-14T16:24:59.761247Z",
      "start_time": "2018-11-14T16:24:59.335443"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -609,7 +649,10 @@
      "end_time": "2018-11-14T16:25:08.303453Z",
      "start_time": "2018-11-14T16:25:05.921576"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -700,7 +743,10 @@
      "end_time": "2018-11-14T16:25:14.799916Z",
      "start_time": "2018-11-14T16:25:12.608840"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -837,7 +883,10 @@
      "end_time": "2018-11-14T16:25:24.307908Z",
      "start_time": "2018-11-14T16:25:23.314550"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -895,7 +944,10 @@
      "end_time": "2018-11-14T16:25:25.475151Z",
      "start_time": "2018-11-14T16:25:24.598174"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -978,7 +1030,10 @@
      "end_time": "2018-11-14T16:25:29.020165Z",
      "start_time": "2018-11-14T16:25:27.130073"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1007,7 +1062,10 @@
      "end_time": "2018-11-14T16:25:31.319947Z",
      "start_time": "2018-11-14T16:25:29.026028"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1092,7 +1150,10 @@
      "start_time": "2018-11-14T16:25:31.336785"
     },
     "code_folding": [],
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1215,7 +1276,10 @@
      "end_time": "2018-11-13T16:42:31.213895Z",
      "start_time": "2018-11-13T16:42:29.095860"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1291,7 +1355,10 @@
      "end_time": "2018-11-13T16:42:33.142946Z",
      "start_time": "2018-11-13T16:42:31.222593"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1319,7 +1386,10 @@
      "end_time": "2018-11-13T16:42:34.981610Z",
      "start_time": "2018-11-13T16:42:33.153011"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1347,7 +1417,10 @@
      "end_time": "2018-11-13T16:42:37.096522Z",
      "start_time": "2018-11-13T16:42:34.995724"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1375,7 +1448,10 @@
      "end_time": "2018-11-13T16:42:37.280320Z",
      "start_time": "2018-11-13T16:42:37.106157"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1390,7 +1466,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1412,9 +1491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "LIGO+Python2.7",
    "language": "python",
-   "name": "python2"
+   "name": "ligo-py2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1426,9 +1505,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
