implementing fixes for gwylm.tshift, gwylm.recompose, and updating analyze.match for basic python3 compatibility

--- a/issues/open/issue3c_manipulate_waveform_frame_with_class.ipynb
+++ b/issues/open/issue3c_manipulate_waveform_frame_with_class.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-28T12:12:03.274549Z",
@@ -32,8 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "(\u001b[0;36mpositive\u001b[0m)>> Applying custom matplotlib settings.\n"
      ]
     }
    ],
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-28T10:26:28.819920Z",
@@ -77,13 +76,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(\u001b[0;36mscsearch\u001b[0m)>> Found \u001b[4minstitute\u001b[0m (=bam) keyword.\n",
-      "(\u001b[0;36mscsearch\u001b[0m)>> Found \u001b[4mkeyword\u001b[0m (=q4a08t120) keyword.\n",
+      "(\u001b[0;36mscsearch\u001b[0m)>> Found \u001b[4mkeyword\u001b[0m (=q18_A0.8T30P0_a0t0p0_dPm20dRm500_prod) keyword.\n",
       "(\u001b[0;36mscsearch\u001b[0m)>> Found \u001b[4mverbose\u001b[0m (=True) keyword.\n",
       "(\u001b[0;36mscsearch\u001b[0m)>> List of keywords or string keyword found: \u001b[0;36mALL scentry objects matching will be passed.\u001b[0m To pass ANY entries matching the keywords, input the keywords using an iterable of not of type list.\n",
-      "## Found \u001b[1m2\u001b[0m\u001b[0;35m possibly degenerate\u001b[0m simulations:\n",
-      "[0001][\u001b[92mhogshead\u001b[0m] \u001b[0;36mq4\u001b[0m: 1chi0.80-p-q4.00\t(\u001b[0;36mq4a08t120dP1_T_120_480\u001b[0m)\n",
-      "[0002][\u001b[92mhogshead\u001b[0m] \u001b[0;36mq4\u001b[0m: 1chi0.80-p-q4.00\t(\u001b[0;36mq4a08t120dP1_T_96_360\u001b[0m)\n",
+      "(\u001b[0;36mscsearch\u001b[0m)>> ## Found \u001b[1m1\u001b[0m\u001b[0;35m possibly degenerate\u001b[0m simulations:\n",
+      "(\u001b[0;36mscsearch\u001b[0m)>> [0001][\u001b[92mhogshead\u001b[0m] \u001b[0;36mq18\u001b[0m: 1chi0.80-p-q18.00\t(\u001b[0;36mq18_A0.8T30P0_a0t0p0_dPm20dRm500_prod\u001b[0m)\n",
       "\n"
      ]
     }
@@ -96,7 +93,10 @@
     "\n",
     "\n",
     "# A = scsearch(institute='bam',keyword='q8a08t150',verbose=True)\n",
-    "A = scsearch(institute='bam',keyword='q4a08t120',verbose=True)\n",
+    "# A = scsearch(institute='bam',keyword='q4a08t120',verbose=True)\n",
+    "A = scsearch(keyword='q18_A0.8T30P0_a0t0p0_dPm20dRm500_prod',verbose=True)\n",
+    "# A = scsearch(keyword='q18_A0.8T120P0_a0t0p0_dP1',verbose=True)\n",
+    "# A = scsearch(keyword='q18_A0.8T150P0_a0t0p0_dP1',verbose=True)\n",
     "\n",
     "\n",
     "# A = scsearch(institute='bam',keyword='q1a04t30',verbose=True)\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-28T10:26:28.863493Z",
@@ -131,10 +131,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.0\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-d868cea1d9a4>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-d868cea1d9a4>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print sign(A[0].S[-1])\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1055,21 +1056,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LIGO+Python2.7",
+   "display_name": "hack-phenomx3",
    "language": "python",
-   "name": "ligo-py2"
+   "name": "hack-phenomx3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
